--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 docker==4.0.2
 jupyter==1.0.0
+matplotlib==3.1.0
 nbstripout==0.3.1
 numpy==1.17.0
 pandas==0.25.0
+plotly==4.9.0
 psycopg2-binary==2.8.3
 sqlalchemy==1.3.6
 geopandas==0.6.2
 shapely==1.6
+scikit-learn==0.22.2
+scikit-surprise==1.1.0
+seaborn==0.9.0
