--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ shapely==1.6
 scikit-learn==0.22.2
 scikit-surprise==1.1.0
 seaborn==0.9.0
+sshtunnel==0.1.5
 stop-words==2018.7.23
 tqdm==4.50.1
 typeform==1.1.0
