(PC-4586): Connect to product database

--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,6 @@
 export TYPEFORM_API_KEY=<>
-PRODUCT_POSTGRES_PASSWORD=<>
 export PROD_FORM_ID=<>
 export TESTING_FORM_ID=<>
 export STAGING_FORM_ID=<>
+PRODUCT_DATABASE_SSH=<>
+PRODUCT_DATABASE_CONNECTION=<>
