(PC-4586): review corrections

--- a/.env.dist
+++ b/.env.dist
@@ -2,5 +2,5 @@ export TYPEFORM_API_KEY=<>
 export PROD_FORM_ID=<>
 export TESTING_FORM_ID=<>
 export STAGING_FORM_ID=<>
-PRODUCT_DATABASE_SSH=<>
-PRODUCT_DATABASE_CONNECTION=<>
+export PRODUCT_DATABASE_SSH=<>
+export PRODUCT_DATABASE_CONNECTION=<>
