--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,5 @@
 export TYPEFORM_API_KEY="str"
+export NEW_PROD_FORM_ID="str"
 export PROD_FORM_ID="str"
 export TESTING_FORM_ID="str"
 export STAGING_FORM_ID="str"
